--- a/src/assets/style/header.scss
+++ b/src/assets/style/header.scss
@@ -14,13 +14,25 @@ header {
       width: 100%;
       display: flex;
 
+      @media (max-width: 400px) {
+        flex-direction: column;
+      }
+
       li {
         list-style-type: none;
-        // width: 10%;
+
         text-align: center;
         display: flex;
         text-transform: capitalize;
         letter-spacing: -1.5px;
+
+        @media (max-width: 400px) {
+          &:not(:first-of-type) {
+            margin: auto;
+            margin-top: 1rem;
+            width: calc(100% / 3);
+          }
+        }
 
         a {
           text-decoration: none;
@@ -38,6 +50,15 @@ header {
             max-width: 7rem;
           }
         }
+
+        @media (max-width: 400px) {
+          margin: auto;
+          text-align: center;
+
+          a {
+            width: 100%;
+          }
+        }
       }
 
       .produits,
@@ -48,6 +69,11 @@ header {
         justify-content: center;
         margin: 1rem;
         font-size: 1.2rem;
+
+        @media (max-width: 600px) {
+          justify-content: flex-end;
+          font-size: 1rem;
+        }
 
         a {
           transition: 0.5s;
@@ -94,6 +120,18 @@ header {
     h1,
     h4 {
       margin-left: 4rem;
+    }
+
+    @media (max-width: 750px) {
+      h1 {
+        font-size: 9.5vw;
+      }
+    }
+
+    @media (max-width: 500px) {
+      h4 {
+        font-size: 1.2rem;
+      }
     }
   }
 }
