--- a/src/assets/style/products.css
+++ b/src/assets/style/products.css
@@ -35,7 +35,7 @@
 
 .products .products-produit {
   min-width: calc(100% / 3);
-  padding: 4rem;
+  padding: 2rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -49,6 +49,18 @@
   -webkit-transition: 0.5s;
   transition: 0.5s;
   scroll-snap-align: center;
+}
+
+@media (max-width: 700px) {
+  .products .products-produit {
+    min-width: calc(100% / 2);
+  }
+}
+
+@media (max-width: 470px) {
+  .products .products-produit {
+    min-width: 100%;
+  }
 }
 
 .products .products-produit:hover {
