--- a/src/assets/style/products.scss
+++ b/src/assets/style/products.scss
@@ -24,12 +24,20 @@
 
   .products-produit {
     min-width: calc(100% / 3);
-    padding: 4rem;
+    padding: 2rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     transition: 0.5s;
     scroll-snap-align: center;
+
+    @media (max-width: 700px) {
+      min-width: calc(100% / 2);
+    }
+
+    @media (max-width: 470px) {
+      min-width: 100%;
+    }
 
     &:hover {
       opacity: 0.8;
