--- a/src/assets/style/social.css
+++ b/src/assets/style/social.css
@@ -25,4 +25,15 @@
 .socials li a:hover {
   color: red;
 }
+
+@media (max-width: 500px) {
+  .socials {
+    bottom: 0;
+    margin-right: 1rem;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+}
 /*# sourceMappingURL=social.css.map */
