--- a/src/assets/style/header.scss
+++ b/src/assets/style/header.scss
@@ -18,6 +18,10 @@ header {
         flex-direction: column;
       }
 
+      .header-nav-block {
+        display: flex;
+      }
+
       li {
         list-style-type: none;
 
