--- a/src/assets/style/avis.css
+++ b/src/assets/style/avis.css
@@ -204,6 +204,17 @@
   color: white;
 }
 
+.avis-section .avis-blocks-left button:hover a {
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  color: white;
+}
+
+.avis-section .avis-blocks-left button a {
+  text-decoration: none;
+  color: black;
+}
+
 @media (max-width: 700px) {
   .avis-section .avis-blocks-left {
     margin: auto;
